@@ -79,7 +79,7 @@ _screencast() {
             local video_encoders='x264 h264_nvenc h264_vaapi h264_qsv
                                   x265 kvazaar svt_hevc hevc_nvenc hevc_vaapi
                                   hevc_qsv vp8 vp8_vaapi vp9 vp9_vaapi theora
-                                  wmv aom_av1 rav1e'
+                                  wmv aom_av1 svt_av1 rav1e'
             COMPREPLY=( $(compgen -W "$video_encoders" -- $cur) )
             return 0
             ;;
